--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,26 +4,26 @@ publish = false
 version = "0.1.3"
 
 edition      = "2021"
-rust-version = "1.70.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [features]
-default = ["pg15"]
+default = ["pg16"]
 pg11    = ["pgrx-tests/pg11", "pgrx/pg11"]
 pg12    = ["pgrx-tests/pg12", "pgrx/pg12"]
 pg13    = ["pgrx-tests/pg13", "pgrx/pg13"]
 pg14    = ["pgrx-tests/pg14", "pgrx/pg14"]
 pg15    = ["pgrx-tests/pg15", "pgrx/pg15"]
+pg16    = ["pgrx-tests/pg16", "pgrx/pg16"]
 pg_test = []
 
 [dependencies]
 inner_ulid = { package = "ulid", version = "1.0.0" }
-pgrx       = "=0.10.0-beta.4"
+pgrx       = "0.10.2"
 
 [dev-dependencies]
-pgrx-tests = "=0.10.0-beta.4"
+pgrx-tests = "0.10.2"
 
 [profile.dev]
 panic = "unwind"
